--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Crash Game</title>
-  <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="/styles/style.css" />
 </head>
 <body>
   <div class="ui">
@@ -16,6 +16,6 @@
     <span id="statusText">Place a bet and start the round.</span>
   </div>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
 </body>
 </html>
